fix: title and recent should be on the same line fix: main image should not be using pointer cursor fix: main image not aligned with content on the side

--- a/public/css/blog.css
+++ b/public/css/blog.css
@@ -886,44 +886,45 @@
     }
 }
 
-.job_hire_text_col>h2 {
+.blog_text_col>h2 {
     font-weight: 600;
     font-size: 40px;
-
+    margin: 0;
 }
 
 @media (max-width: 767px) {
-    .job_hire_text_col>h2 {
+    .blog_text_col>h2 {
         font-size: 35px;
 
     }
 }
 
 @media (max-width: 479px) {
-    .job_hire_text_col>h2 {
+    .blog_text_col>h2 {
         font-size: 25px;
     }
 }
 
-.job_hire_text_col>p {
+.blog_text_col>p {
     font-size: 18px;
-    margin-top: 35px;
+    margin: 20px auto 60px auto;
     width: 600px;
     display: inline-block;
+    color: #6F6F6F;
 }
 
 @media (max-width: 767px) {
-    .job_hire_text_col>p {
+    .blog_text_col>p {
         font-size: 17px;
-        margin-top: 30px;
+        margin: 20px auto 60px auto;
         width: 100%;
     }
 }
 
 @media (max-width: 479px) {
-    .job_hire_text_col>p {
+    .blog_text_col>p {
         font-size: 15px;
-        margin-top: 20px;
+        margin: 20px auto 60px auto;
     }
 }
 
@@ -1193,7 +1194,7 @@
 }
 
 .project-management {
-	
+
 }
 
 .rectangle {
@@ -1203,7 +1204,7 @@
 	box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.1);
 	border-radius: 12px;
 	background-image: url('images/rectangle.png');
-	background-repeat: no-repeat; 
+	background-repeat: no-repeat;
 	background-size: auto;
 }
 
